--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -5,18 +5,13 @@ packages:
       - "asdf"
       - "gawk"
       - "gpg"
-      - "bruno"
       - "colima"
       - "fish"
       - "jq"
       - "libdap"
       - "lua-language-server"
-      - "neovim --HEAD"
-      - "neovim"
       - "neovim-remote"
-      - "tsirysndr/tap/envhub"
       - "vault"
-      - "elasticsearch"
       - "rabbitmq"
       - "zellij"
       - "prettierd"
@@ -24,11 +19,18 @@ packages:
       - "gh"
       - "fish"
       - "go"
+    brews_with_args:
+      neovim:
+        name: "neovim"
+        args:
+          - "HEAD"
     casks:
       - "google-chrome"
       - "dbeaver-community"
       - "gitbutler"
       - "google-cloud-sdk"
       - "kitty"
+      - "bruno"
   nix:
     - "cargo"
+    - "elasticsearch"
