--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -18,6 +18,7 @@ packages:
       - "gh"
       - "fish"
       - "go"
+      - "bitwarden-cli"
     brews_with_args:
       neovim:
         name: "neovim"
