--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -18,7 +18,6 @@ packages:
       - "gh"
       - "fish"
       - "go"
-      - "koekeishiya/formulae/yabai"
     brews_with_args:
       neovim:
         name: "neovim"
@@ -31,6 +30,7 @@ packages:
       - "google-cloud-sdk"
       - "kitty"
       - "bruno"
+      - "rectangle"
   nix:
     - "nixpkgs.cargo"
     - "nixpkgs.elasticsearch"
