fix: replace lazykube with k9s

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -18,7 +18,7 @@ packages:
       - "gh"
       - "fish"
       - "go"
-      - "tnk-studio/tools/lazykube"
+      - "derailed/k9s/k9s"
     brews_with_args:
       neovim:
         name: "neovim"
