feat: add another-redis-desktop-manager

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -32,6 +32,7 @@ packages:
       - "kitty"
       - "bruno"
       - "rectangle"
+      - "another-redis-desktop-manager"
   nix:
     - "nixpkgs.cargo"
     - "nixpkgs.elasticsearch"
