fix: add ripgrep

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -19,6 +19,7 @@ packages:
       - "fish"
       - "go"
       - "derailed/k9s/k9s"
+      - "ripgrep"
     brews_with_args:
       neovim:
         name: "neovim"
