--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -34,6 +34,7 @@ packages:
       - "bruno"
       - "rectangle"
       - "another-redis-desktop-manager"
+      - "ghostty"
   nix:
     - "nixpkgs.cargo"
     - "nixpkgs.elasticsearch"
