--- a/private_Library/private_Application Support/lazygit/config.yml
+++ b/private_Library/private_Application Support/lazygit/config.yml
@@ -29,4 +29,4 @@ git:
   paging:
     colorArg: always
     # pager: diff-so-fancy
-    pager: delta --dark --paging=never
+    pager: delta --paging=never
