fix: use light on delta

--- a/private_Library/private_Application Support/lazygit/config.yml
+++ b/private_Library/private_Application Support/lazygit/config.yml
@@ -28,5 +28,4 @@ gui:
 git:
   paging:
     colorArg: always
-    # pager: diff-so-fancy
-    pager: delta --paging=never
+    pager: delta delta --detect-dark-light=always --light --paging=never
