--- a/private_Library/private_Application Support/lazygit/config.yml
+++ b/private_Library/private_Application Support/lazygit/config.yml
@@ -28,4 +28,4 @@ gui:
 git:
   paging:
     colorArg: always
-    pager: delta delta --detect-dark-light=always --light --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+    pager: diff-so-fancy
