--- a/dot_config/opencode/opencode.jsonc
+++ b/dot_config/opencode/opencode.jsonc
@@ -1,5 +1,5 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "autoupdate": true,
-  "model": "gpt-4.1",
+  "model": "github-copilot/gpt-4.1",
 }
