--- a/dot_config/opencode/opencode.jsonc
+++ b/dot_config/opencode/opencode.jsonc
@@ -2,4 +2,11 @@
   "$schema": "https://opencode.ai/config.json",
   "autoupdate": true,
   "model": "github-copilot/gpt-4.1",
+  "mcp": {
+    "playwright": {
+      "type": "local",
+      "command": ["npx", "chrome-devtools-mcp@latest"],
+      "enabled": true,
+    },
+  },
 }
