--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -18,6 +18,7 @@ packages:
       - "ripgrep"
       - "diff-so-fancy"
       - "opencode"
+      - "exercism"
     brews_with_args:
       neovim:
         name: "neovim"
